# job-bot

./: .env.example  .gitignore  Dockerfile  README.md  STRUCTURE_SUMMARY.md  alembic.ini  docker-compose.yml  job_application_copilot_mvp_spec.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  verify_structure.py
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 477011cd8bf7_add_pgvector_extension.py
app/api/: applications.py  companies.py  jobs.py  outreach.py  profile.py  tracker.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: application.py  company.py  contact.py  job.py  outreach.py  profile.py  tracker.py
app/schemas/: applications.py  company.py  jobs.py  outreach.py  profile.py
app/services/: __init__.py
app/services/companies/: __init__.py  company_service.py  suggestion_service.py
app/services/config/: company_config.py
app/services/fetchers/: __init__.py  ashby.py  base.py  factory.py  greenhouse.py  lever.py  utils.py
config/: companies.yaml  settings.py
docs/: api.md  architecture.md  deployment.md  user_guide.md
scripts/: cleanup.py  fetch_jobs.py  seed_data.py  sync_tracker.py
tests/: conftest.py
tests/e2e/: test_user_flows.py
tests/integration/: test_api.py  test_api_simple.py  test_company_api.py  test_fetcher_factory.py  test_job_fetching_api.py
tests/unit/: test_companies.py  test_company_config.py  test_core.py  test_error_handling.py  test_fetchers.py  test_models.py  test_scoring.py
